# SRT-Link

./: README.md  pyproject.toml
srt_link/: __init__.py  __main__.py
srt_link/models/: base.py  input_filter.py  section.py
tests/: generate_test_srts.py  raw.srt  ref.srt  test_sanity.py
