[tool.poetry]
name = "srt-link"
version = "0.1.0"
description = "Filter, merge, and order SRT sections"
authors = ["EliaOneAgain"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
